Fixed contact info wrapping

--- a/cv.css
+++ b/cv.css
@@ -32,7 +32,7 @@ ul {
 #contact_container {
 	margin-left:   auto;
 	margin-right:  auto;
-	font-size:     10pt;
+	font-size:     9pt;
 	display:       table;
 	margin-top:    1em;
 }
